# ustud

./: .gitignore  CLAUDE.md  README.md  UStud.spec  build_standalone.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup.ps1
.cursor/rules/: axiom-progress-reporting.mdc
.github/workflows/: eod-ceo-brief.yml
boiler/: README.md  index.html  package-lock.json  package.json  vite.config.js
boiler/boiler/: index.html  tailwind.config.js
boiler/src/: App.jsx  index.css
cursor/: AXIOM_OPERATING_INSTRUCTIONS.md  EMPLOYEE_ONBOARDING.md  SESSION_COMMANDS.md
cursor/onboarding/: 00_MANAGEMENT_CHECKLIST.md  01_DAY0_LAPTOP_SETUP.md  02_GITHUB_ZERO_TO_HERO.md  03_WEEK1_BOOTCAMP.md  04_TRUST_RECORDING.md  05_FREE_LEARNING_RESOURCES.md  AXIOM_EMPLOYEE_ONBOARDING.docx  README.md
docs/: AXIOM_VISION.md  DECISION_LOG.md  EOD_BRIEF_SETUP.md  PROJECT_BRIEF.md  USTUD_PROJECT_BRIEF_ONE_PAGER.docx
modules/core_curriculum/: curriculum.yaml  manifest.json
modules/english_basics/: curriculum.yaml  manifest.json
modules/fitness_nutrition/: curriculum.yaml  manifest.json
modules/mental_health/: curriculum.yaml  manifest.json
progress/: BLOCKERS.md  CURRENT_STATE.md  DAILY_LOG.md  TEMPLATE.md  WEEK1_LOG.md  WEEK2_LOG.md
scripts/: download_oer.py  generate-employee-onboarding-docx.py  generate-eod-brief.mjs  generate-ustud-brief-onepager.py  oer_manifest.json  onboarding_doc_common.py  onboarding_document_body.py  organize_ustud_library_books.py  reboot.ps1
src/ustud/: __init__.py  db.py  (+2 more)
tools/: README.md
ui/: app.js  index.html  styles.css
(+54 files in other folders)
